# inotify-cpp

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  FileSystemEvent.cpp  Inotify.cpp  Notification.cpp
src/include/inotify-cpp/: FileSystemEvent.h  Notification.h
